<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your Way!</string>
    <string name="powered_by">Powered by touseef raza</string>

    <!-- Strings for On Boarding Screen -->

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>


    <!--categories-->
    <string name="hotets">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airpots">Airports</string>

    <!--title and description-->

    <string name="feature_location">All Featured Location</string>
    <string name="feature_location_description">All the Location that are Featured and have the top demand in town</string>
    <string name="most_viewes_location">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>

    <!--gerneal strings-->

    <string name="sign_up">Sign Up</string>
    <string name="retailor_heading">Grow\nYour Business</string>
    <string name="retailor_tag_line">We will help you to grow your business unsing Online Service</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How We Work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>


    <style name="navigatinTheme">

        <item name="android:colorPrimary">#FFEB3B</item>

        <item name="android:colorControlHighlight">#000</item>

    </style>


</resources>














